--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		</ul>
 
 	 </div>
-	<ul data-orbit id="slider">
+	<ul data-orbit="bullets:false;" id="slider">
 	  <li class="slider-img-1">
 	    <img src="images/banner1.png" />
 	    <div class="orbit-caption"><span class="caption-text">Best Magnetic Drain Bolts in the World</span>
@@ -89,33 +89,37 @@
 	  </li> -->
 
 	</ul>
-
-	<div class="row">
-		<hr />
-	</div>
-
-	<div class="row">
-    <div class="medium-4 large-4 columns">
-    	<div class="feature-box">
-	    <img src="http://placehold.it/400x250" />
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
-	    </p>
-  		</div>
-    </div>
-		<div class="medium-4 large-4 columns">
-    	<div class="feature-box">
-	    <img src="http://placehold.it/400x250" />
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-	    </p>
+  <div class="content">
+		<div class="row">
+			<hr />
 		</div>
-    </div>
-    <div class="medium-4 large-4 columns">
-    	<div class="feature-box">
-	    <img src="http://placehold.it/400x250" />
-	    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
-	    </p>
-  		</div>
-    </div>
+
+		<div class="row">
+	    <div class="medium-4 large-4 columns">
+	    	<div class="feature-box">
+		    <img src="http://placehold.it/400x250" />
+	
+		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
+		    </p>
+	  		</div>
+	    </div>
+			<div class="medium-4 large-4 columns">
+	    	<div class="feature-box">
+		    <img src="http://placehold.it/400x250" />
+
+		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+		    </p>
+			</div>
+	    </div>
+	    <div class="medium-4 large-4 columns">
+	    	<div class="feature-box">
+		    <img src="http://placehold.it/400x250" />
+
+		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+		    </p>
+	  		</div>
+	    </div>
+		</div>
 	</div>
 
 </section>
@@ -128,7 +132,40 @@
 <div class="row"  style="background:blue; height:100px">akkk</div> -->
 
 <footer id="footer">
+<div class="row">
+	    <div class="medium-3 large-3 columns">
+        <h5>Sitemap</h5>
+        <ul class="footer-nav">
+        	<li>Products<li>
+        	<li>Warranty Info</li>
+        	<li>News</li>
+        	<li>About Us</li>
+        </ul>
+	    </div>
+			<div class="medium-3 large-3 columns">
+        <h5>Social</h5>
+        <ul class="social">
+			  	<li><a href="#"><i class="foundicon-facebook"></i></a></li>
+				  <li><a href="#"><i class="foundicon-youtube"></i></a></li>
+				  <li><a href="#"><i class="foundicon-google-plus"></i></a></li> 
+				</ul>
+	    </div>
+	    <div class="medium-3 large-3 columns">
+	      <h5>Contact</h5>
+	      <div>
+				<address>Address:
+					<br>Unit 41, 8 St Jude Court, Browns Plains, QLD 4118 Australia
+					<br>
+					<br>
+					Tel: <a href="tel:+07-38009889">07-38009889</a><br>
+					Email: contact@kaibird.com.au</address>	<div class="divider"></div>
+					</div>
 
+		 </div>
+		 <div class="medium-3 large-3 columns">
+
+		 </div>
+	</div>
 </footer>
 
 
@@ -170,7 +207,9 @@
 	
   
   <script>
-   // $(document).foundation();
+$(document).foundation();
+  
+  /*
     $(document).foundation('orbit', {
 		  // animation: 'fade',
 		  timer_speed: 10000000,
@@ -199,7 +238,7 @@
 		  // before_slide_change: function(){},
 		  // after_slide_change: function(){},
 		  bullets: false
-		});
+		});*/
   </script>
 </body>
 </html>
