commit before remote push

--- a/index.html
+++ b/index.html
@@ -36,8 +36,6 @@
 			  <li><a href="#">Contact</a></li>
 			  <li><a href="#">News</a></li>
 			  <li class="divider"></li>
-
-			  <li class="divider"></li>
 			</ul>
 			<ul class="right social">
 			  <li><a href="#"><i class="foundicon-facebook"></i></a></li>
@@ -65,20 +63,23 @@
 </header>
 <section class="main">
 	<div class="row nav-container">
-		<ul class="nav">
-	    <li class="active"><a href="#">Product A</a></li>
-	    <li><a href="#">Product B</a></li>
-	    <li><a href="#">Product C</a></li>
-	    <li><a href="#">Product D</a></li>
-	    <li><a href="#">Product E</a></li>
-		</ul>
+			<ul class="nav">
+		    <li class="active"><a href="#">Product A</a></li>
+		    <li><a href="#">Product B</a></li>
+		    <li><a href="#">Product C</a></li>
+		    <li><a href="#">Product D</a></li>
+		    <li><a href="#">Product E</a></li>
+		   
+			</ul>
 
-	 </div>
+ 
+
+	</div>
 	<ul data-orbit="bullets:false;" id="slider">
 	  <li class="slider-img-1">
 	    <img src="images/banner1.png" />
 	    <div class="orbit-caption"><span class="caption-text">Best Magnetic Drain Bolts in the World</span>
-	    	<a href="#" class="theme-lred-btn">Medium Button</a>
+	    	<a href="#" class="btn btn-lred">Medium Button</a>
 	    </div>
 	  </li>
 <!-- 	  <li>
