--- a/index.html
+++ b/index.html
@@ -18,29 +18,32 @@
 </head>
 <body>
 
-<header>
+<header id="header">
 <div class="top-bar-container">
 	<nav class="top-bar row">
 		<ul class="title-area">
-		  <li class="name"><!-- Leave this empty --></li>
-		   <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
+		  <li class="name show-for-small">
+		  <h1>
+        
+		  	<a href="#"><img src="images/top-bar-logo.png" /></a></h1></li>
+		  <li class="toggle-topbar menu-icon"><a href="#"><span>Menu</span></a></li>
 		</ul>
 		<section class="top-bar-section">
 		<!-- Left Nav Section -->
 			<ul class="left">
-			  <li class="divider"></li>
 			  <li class="active"><a href="#">Products</a></li>
-			  <li class="divider"></li>
 			  <li><a href="#">Warranty Info</a></li>
 			  <li><a href="#">About Us</a></li>
 			  <li><a href="#">Contact</a></li>
 			  <li><a href="#">News</a></li>
 			  <li class="divider"></li>
 			</ul>
-			<ul class="right social">
+			<ul class="right social hide-for-small">
+	  		<li class="divider"></li>
 			  <li><a href="#"><i class="foundicon-facebook"></i></a></li>
 			  <li><a href="#"><i class="foundicon-youtube"></i></a></li>
 			  <li><a href="#"><i class="foundicon-google-plus"></i></a></li>
+  		  <li class="divider"></li>
 			</ul>
 
 		</section>
@@ -51,8 +54,8 @@
 
 
 <div class="row">
-	<div class="large-12 columns logo-area">
-		<h1 class="logo"><a href="#">Mission Speed</a></h1>
+	<div class="large-12 columns logo-area hide-for-small">
+		<div class="logo"><a href="#"></a></div>
 		<h1 class="logo-text">Mission Speed</h1>
 		<span class="slogan">Quality Automobile Wheel Bolts</span>
 
@@ -61,7 +64,7 @@
 
 
 </header>
-<section class="main">
+<section id="main">
 	<div class="row nav-container">
 			<ul class="nav">
 		    <li class="active"><a href="#">Product A</a></li>
@@ -71,25 +74,42 @@
 		    <li><a href="#">Product E</a></li>
 		   
 			</ul>
-
- 
-
+<!-- 		<nav class="top-bar">
+			<ul class="title-area">
+			  <li class="name"></li>
+			   <li class="toggle-topbar menu-icon"><a href="#"><span>Products</span></a></li>
+			</ul>
+			<section class="top-bar-section">
+		
+				<ul class="left">
+			    <li class="active"><a href="#">Product A</a></li>
+			    <li><a href="#">Product B</a></li>
+			    <li><a href="#">Product C</a></li>
+			    <li><a href="#">Product D</a></li>
+			    <li><a href="#">Product E</a></li>
+				  <li class="divider"></li>
+				</ul>
+			</section> -->
+			
+		</nav>
 	</div>
-	<ul data-orbit="bullets:false;" id="slider">
-	  <li class="slider-img-1">
-	    <img src="images/banner1.png" />
-	    <div class="orbit-caption"><span class="caption-text">Best Magnetic Drain Bolts in the World</span>
-	    	<a href="#" class="btn btn-lred">Medium Button</a>
-	    </div>
-	  </li>
-<!-- 	  <li>
-	    <img src="http://placehold.it/1200x350" />
-	    <div class="orbit-caption">Best Magnetic Drain Bolts in the World 
-	    	<a href="#" class="medium button">Medium Button</a>
-	    </div>
-	  </li> -->
 
-	</ul>
+
+		<ul data-orbit="bullets:false;" id="slider" class="hide-for-small">
+		  <li class="slider-img-1">
+		    <img src="images/banner1.png" />
+		    <div class="orbit-caption"><span class="caption-text">Best Magnetic Drain Bolts in the World</span>
+		    	<a href="#" class="btn btn-lred">Medium Button</a>
+		    </div>
+		  </li>
+	<!-- 	  <li>
+		    <img src="http://placehold.it/1200x350" />
+		    <div class="orbit-caption">Best Magnetic Drain Bolts in the World 
+		    	<a href="#" class="medium button">Medium Button</a>
+		    </div>
+		  </li> -->
+		</ul>
+
   <div class="content">
 		<div class="row">
 			<hr />
@@ -97,24 +117,24 @@
 
 		<div class="row">
 	    <div class="medium-4 large-4 columns">
-	    	<div class="feature-box">
-		    <img src="http://placehold.it/400x250" />
+	    	<div class="l-feature-box">
+		    <img src="http://placehold.it/400x250" class="feature-image" />
 	
 		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in 
 		    </p>
 	  		</div>
 	    </div>
 			<div class="medium-4 large-4 columns">
-	    	<div class="feature-box">
-		    <img src="http://placehold.it/400x250" />
+	    	<div class="l-feature-box">
+		    <img src="http://placehold.it/400x250" class="feature-image"/>
 
 		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 		    </p>
 			</div>
 	    </div>
 	    <div class="medium-4 large-4 columns">
-	    	<div class="feature-box">
-		    <img src="http://placehold.it/400x250" />
+	    	<div class="l-feature-box">
+		    <img src="http://placehold.it/400x250" class="feature-image"/>
 
 		    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
 		    </p>
